<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertarActivity">

    <EditText
        android:id="@+id/editTxtTitutlo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/placeholder_titulo"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/contadorCaracteresTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:textColor="@color/black" />

    <ScrollView
        android:id="@+id/desplazadorTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTxtDefinicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="30"
            android:gravity="start|top"
            android:hint="@string/placeholder_definicion"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:maxLines="10"
            android:minLines="4"
            android:textSize="23sp" />

    </ScrollView>

    <TextView
        android:id="@+id/contadorCaracteresDefinicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/botonGuardarDefinicion"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/editar_definicion"
        android:textSize="20sp" />

    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/cancelar"
        android:textSize="20sp" />

</LinearLayout>